# pleease

./: CMakeLists.txt
labys/lab1/task1/: CMakeLists.txt
labys/lab1/task2/: CMakeLists.txt
labys/lab1/task3/: CMakeLists.txt
labys/lab1/task4/: CMakeLists.txt
labys/lab1/task5/: CMakeLists.txt
labys/lab1/task7/: CMakeLists.txt
labys/lab2/: Desktop.lnk
labys/lab4/task4/: CMakeLists.txt
пожалуйста/lab1/: CMakeLists.txt
пожалуйста/lab1/task2/: CMakeLists.txt
пожалуйста/lab1/task3/: CMakeLists.txt
пожалуйста/lab1/task4/: CMakeLists.txt
пожалуйста/lab1/task5/: CMakeLists.txt
пожалуйста/lab1/task6/: CMakeLists.txt
пожалуйста/lab1/task7/: CMakeLists.txt
пожалуйста/lab4/: CMakeLists.txt
пожалуйста/lab4/task5/: CMakeLists.txt
пожалуйста/lab6/: CMakeLists.txt  head.h  main.c
