# CMakeList.txt: проект CMake для laboratoryWork_6; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_subdirectory("lab1")
add_subdirectory("lab2")
add_subdirectory("lab3")
add_subdirectory("lab4")
add_subdirectory("lab5")
add_subdirectory("lab6")
# TODO: Добавьте тесты и целевые объекты, если это необходимо.
