# CMakeList.txt: проект CMake для laboratoryWork_6; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_subdirectory("lab1/task1")
add_subdirectory("lab1/task2")
add_subdirectory("lab1/task3")
add_subdirectory("lab1/task4")
add_subdirectory("lab1/task5")
add_subdirectory("lab1/task6")
add_subdirectory("lab1/task7")
add_subdirectory("lab2")
add_subdirectory("lab3")
add_subdirectory("lab4/task1")
add_subdirectory("lab4/task2")
add_subdirectory("lab4/task3")
add_subdirectory("lab4/task4")
add_subdirectory("lab4/task5")
add_subdirectory("lab4/task6")
add_subdirectory("lab5")
add_subdirectory("lab6")
add_subdirectory("lab7")
# TODO: Добавьте тесты и целевые объекты, если это необходимо.
