# CMakeList.txt: проект CMake для laboratoryWork_6; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_subdirectory("task1")
add_subdirectory("task2")
add_subdirectory("task3")
add_subdirectory("task4")
add_subdirectory("task5")
add_subdirectory("task6")
# TODO: Добавьте тесты и целевые объекты, если это необходимо.
