# CMakeList.txt: проект CMake для laboratoryWork_4; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (laboratoryWork_1_task6 "task6_main.c" "task6_main.o" "task6_func.c" "task6_func.o")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
