# CMakeList.txt: проект CMake для laboratoryWork_4; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (laboratoryWork_1_task7 "task7_main.c" "task7_main.o" "task7_func.c" "task7_func.o")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
